--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- Desktop Navigation -->
 <nav class="navbar navbar-desktop">
     <div class="logo">
-        <a href="index.html">
+        <a href="#">
             <img src="ASSETS/IMAGES/pdf_tools.png" alt="PDF Tools Trio Logo">
         </a>
     </div>
@@ -31,7 +31,7 @@
     </div>
 </li>
 
-        <li><a href="BUY ME A COFFEE/index.html"><i class="fas fa-heart"></i> Support Us</a></li>
+        <li><a href="BUY ME A COFFEE/"><i class="fas fa-heart"></i> Support Us</a></li>
     </ul>
 </nav>
 
@@ -135,14 +135,14 @@
 <!-- Footer -->
 <footer class="footer">
     <p>
-        <a href="DISCLAIMER/index.html">Disclaimer</a> | 
+        <a href="DISCLAIMER/">Disclaimer</a> | 
         <a href="https://wa.me/+27715780602" target="_blank">
             <i class="fab fa-whatsapp"></i> Whatsapp
         </a> | 
         <a href="https://t.me/KARLIIIIII" target="_blank">
             <i class="fab fa-telegram-plane"></i> Telegram
         </a> | 
-        <a href="BUY ME A COFFEE/index.html">Support Us</a>
+        <a href="BUY ME A COFFEE/">Support Us</a>
     </p>
     <p>&copy; 2025 PDF TOOLS TRIO | All Rights Reserved</p>
 </footer>
