--- a/BUY ME A COFFEE/index.html
+++ b/BUY ME A COFFEE/index.html
@@ -13,7 +13,7 @@
 <!-- Desktop Navigation -->
 <nav class="navbar navbar-desktop">
     <div class="logo">
-        <a href="../index.html">
+        <a href="../">
             <img src="../ASSETS/IMAGES/pdf_tools.png" alt="PDF Tools Trio Logo">
         </a>
     </div>
@@ -59,7 +59,7 @@
 <!-- Footer -->
 <footer class="footer">
     <p>
-        <a href="../DISCLAIMER/index.html">Disclaimer</a> | 
+        <a href="../DISCLAIMER/">Disclaimer</a> | 
         <a href="https://wa.me/+27715780602" target="_blank">
             <i class="fab fa-whatsapp"></i> Whatsapp
         </a> | 
