--- a/BUY ME A COFFEE/index.html
+++ b/BUY ME A COFFEE/index.html
@@ -35,7 +35,7 @@
     </ul>
 </nav>
 <div class="info-section">
-    <h2>Thank You for Supporting PDF TOOLS TRIO! 🙌</h2>
+    <h2>Thank You for Supporting KALI PDF TOOLS! 🙌</h2>
     <p>Your support helps us keep these tools **free and accessible** for everyone.</p>
     <p>Every contribution allows us to improve our software, add new features, and maintain a smooth experience for all users. 💻✨</p>
     <p>We truly appreciate your generosity!💙</p>
