--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Google Search Console Verification -->
+  <meta name="google-site-verification" content="B1F5fv1hUXA7BxGgV4DJyAEmpeeeOpYAy8w0Z_M99y0" />	
   <title>KALI PDF TOOLS</title>
   <link rel="stylesheet" href="ASSETS/CSS/styles.css">
   <link rel="icon" href="ASSETS/IMAGES/favicon.ico" type="image/x-icon">
