--- a/BUY ME A COFFEE/index.html
+++ b/BUY ME A COFFEE/index.html
@@ -46,14 +46,24 @@
         <div class="image-space">
             <img src="coffee-cup.png" alt="Your Image">
         </div>
-        <div class="card">
-            <img src="paypal.jpg" alt="PayPal Logo">
-            <p></p>
-            <a href="https://wa.me/+27715780602" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Logo" class="contact-logo">
-            </a>
-        </div>
-        <a href="https://www.paypal.com/paypalme/CalvinAndile?country.x=ZA&locale.x=en_US" class="proceed-button">Proceed</a>
+		<div class="payment-section">
+         <!-- PayPal Payment Form -->
+		  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+			<div class="payment-logo-container">
+			  <img src="ASSETS/IMAGES/paypal.jpg" alt="Payfast" class="payment-logo">
+			</div>
+			<input type="hidden" name="cmd" value="_xclick">
+			<input type="hidden" name="business" value="calvzeto@gmail.com">
+			<input type="hidden" name="currency_code" value="USD">
+			<input type="hidden" name="item_name" value="Custom Document Service">
+			<input type="hidden" name="return" value="https://yourdomain.com/thank-you.html">
+			<input type="hidden" name="cancel_return" value="https://yourdomain.com/payment-cancelled.html">
+
+			<input type="number" name="amount" min="1" step="0.01" placeholder="Amount in USD" required>
+			<input type="submit" value="Pay with PayPal">
+		  </form>
+		</div>
+		
     </div>
 
 <!-- Footer -->
