--- a/PRODUCTS/DOCX-EPUB TO PDF CONVERTER/index.html
+++ b/PRODUCTS/DOCX-EPUB TO PDF CONVERTER/index.html
@@ -65,21 +65,19 @@
       <!-- Wrapper div for both button and download count -->
       <div class="button-download-wrapper">
         <div class="button-wrapper">
-          <a href="https://drive.google.com/file/d/1xqlGZnaISyrpV_K7RMu-LoSkfq8DE7TQ/view?usp=drive_link" class="btn download-btn" data-tool="converter">Download</a>
+          <a href="PAYMENT/" class="btn download-btn" data-tool="converter">Download</a>
         </div>
       </div>
       
-		<div id="coffee-overlay" class="overlay-hidden">
-		  <div class="overlay-content">
-			<a href="../../BUY ME A COFFEE/index.html" class="coffee-link">
-			  <img src="../../ASSETS/IMAGES/coffee-cup.png" class="coffee-image" />
-			</a>
-			<p class="coffee-message">☕ Please don't forget to buy me a coffee!</p>
-			<button id="close-overlay">Close</button>
-		  </div>
-		</div>
-
-
+	<div id="coffee-overlay" class="overlay-hidden">
+	  <div class="overlay-content">
+		<a href="PAYMENT/" class="coffee-link">
+		  <img src="../../ASSETS/IMAGES/coffee-cup.png" class="coffee-image" />
+		</a>
+		<p class="coffee-message">☕ Buy me a coffee to unlock the download!</p>
+		<button id="close-overlay">Close</button>
+	  </div>
+	</div>
 
     </div>
   </div>
