--- a/PRODUCTS/PDF REMOVE TEXT & REPLACE TEXT/index.html
+++ b/PRODUCTS/PDF REMOVE TEXT & REPLACE TEXT/index.html
@@ -62,18 +62,18 @@
 				
 			</ul>
 
-        <!-- Wrapper div for both button and download count -->
-		<div class="button-download-wrapper">
-			<div class="button-wrapper">
-			<a href="https://drive.google.com/file/d/1a_sws4xtmk19rCwPB6x0HXozNZgzOdKP/view?usp=drive_link" class="btn download-btn" data-tool="remove">Download</a>
-			</div>
+        <div class="button-download-wrapper">
+        <div class="button-wrapper">
+          <a href="PAYMENT/" class="btn download-btn" data-tool="converter">Download</a>
+        </div>
 		</div>
+      
 		<div id="coffee-overlay" class="overlay-hidden">
 		  <div class="overlay-content">
-			<a href="../../BUY ME A COFFEE/index.html" class="coffee-link">
+			<a href="PAYMENT/" class="coffee-link">
 			  <img src="../../ASSETS/IMAGES/coffee-cup.png" class="coffee-image" />
 			</a>
-			<p class="coffee-message">☕ Please don't forget to buy me a coffee!</p>
+			<p class="coffee-message">☕ Buy me a coffee to unlock the download!</p>
 			<button id="close-overlay">Close</button>
 		  </div>
 		</div>
