--- a/PRODUCTS/INSERT-DELETE BLANK PAGE/PAYMENT/index.html
+++ b/PRODUCTS/INSERT-DELETE BLANK PAGE/PAYMENT/index.html
@@ -48,7 +48,7 @@
       <input type="hidden" name="currency_code" value="USD" />
       <input type="hidden" name="item_name" value="AUTO-BE" />
       <input type="hidden" name="return" value="https://drive.google.com/file/d/11BNc-4CtFet29clCf5KSyv-QGLl17FAf/view?usp=drive_link" />
-      <input type="hidden" name="cancel_return" value="PAYMENT FAILED/" />
+      <input type="hidden" name="cancel_return" value="https://kalifx.github.io/PDFTOOLSTRIO/PRODUCTS/INSERT-DELETE%20BLANK%20PAGE/PAYMENT/PAYMENT%20FAILED/" />
 
       <input
         type="number"
