--- a/PRODUCTS/PDF REMOVE TEXT & REPLACE TEXT/PAYMENT/index.html
+++ b/PRODUCTS/PDF REMOVE TEXT & REPLACE TEXT/PAYMENT/index.html
@@ -48,7 +48,7 @@
       <input type="hidden" name="currency_code" value="USD" />
       <input type="hidden" name="item_name" value="AUTO-BE" />
       <input type="hidden" name="return" value="https://drive.google.com/file/d/10aRWN7q-46epE2ydc5rxYGEYFSW1kz-p/view?usp=drive_link" />
-      <input type="hidden" name="cancel_return" value="PAYMENT FAILED/" />
+      <input type="hidden" name="cancel_return" value="https://kalifx.github.io/PDFTOOLSTRIO/PRODUCTS/PDF%20REMOVE%20TEXT%20%26%20REPLACE%20TEXT/PAYMENT/PAYMENT%20FAILED/" />
 
       <input
         type="number"
