--- a/PRODUCTS/PDF MERGER AND SPLITTER/PAYMENT/index.html
+++ b/PRODUCTS/PDF MERGER AND SPLITTER/PAYMENT/index.html
@@ -48,7 +48,7 @@
       <input type="hidden" name="currency_code" value="USD" />
       <input type="hidden" name="item_name" value="AUTO-BE" />
       <input type="hidden" name="return" value="https://drive.google.com/file/d/1UsoLC-7uvXIQutxBbhJpuMzyOi__mV2u/view?usp=drive_link" />
-      <input type="hidden" name="cancel_return" value="PAYMENT FAILED/" />
+      <input type="hidden" name="cancel_return" value="https://kalifx.github.io/PDFTOOLSTRIO/PRODUCTS/PDF%20MERGER%20AND%20SPLITTER/PAYMENT/PAYMENT%20FAILED/" />
 
       <input
         type="number"
