--- a/BUY ME A COFFEE/index.html
+++ b/BUY ME A COFFEE/index.html
@@ -56,8 +56,8 @@
 			<input type="hidden" name="business" value="calvzeto@gmail.com">
 			<input type="hidden" name="currency_code" value="USD">
 			<input type="hidden" name="item_name" value="Custom Document Service">
-			<input type="hidden" name="return" value="https://yourdomain.com/thank-you.html">
-			<input type="hidden" name="cancel_return" value="https://yourdomain.com/payment-cancelled.html">
+			<input type="hidden" name="return" value="https://kalifx.github.io/PDFTOOLSTRIO/">
+			<input type="hidden" name="cancel_return" value="https://kalifx.github.io/PDFTOOLSTRIO/BUY%20ME%20A%20COFFEE/PAYMENT%20FAILED/">
 
 			<input type="number" name="amount" min="1" step="0.01" placeholder="Amount in USD" required>
 			<input type="submit" value="Pay with PayPal">
