--- a/PRODUCTS/PDF REMOVE TEXT & REPLACE TEXT/index.html
+++ b/PRODUCTS/PDF REMOVE TEXT & REPLACE TEXT/index.html
@@ -36,7 +36,7 @@
 </nav>
 <section class="software-section">
     <div class="software">
-	<h2>PDF REMOVE TEXT & REPLACE TEXT</h2>
+	<h2>PDF TEXT ERASER & REPLACE TEXT</h2>
 		<img src="../../ASSETS/IMAGES/REMOVE TEXT.png" alt="Edit PDF Tool">
 		<div class="software-info">
     <p>Easily remove or replace text in your PDFs. Supports batch processing, allowing you to modify multiple PDFs simultaneously for efficient editing.</p>
