--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </a>
 		<a href="PRODUCTS/PDF REMOVE TEXT & REPLACE TEXT/index.html" class="software-link">
 		<div class="software-info">
-            <h2>PDF REMOVE TEXT & REPLACE TEXT</h2>
+            <h2>PDF TEXT ERASER & REPLACE TEXT</h2>
             <p>Easily remove or replace text in your PDFs. Supports batch processing, allowing you to modify multiple PDFs simultaneously for efficient editing.</p>
         </div>
 		</a>
